# proto-ros2

./: .gitignore  README.md  launch.sh
src/apds9960_input_pkg/: package.xml  setup.cfg  setup.py
src/apds9960_input_pkg/apds9960_input_pkg/: apds9960_input.py
src/audio_expression_detector_pkg/: SoundTrainer_E50.keras  package.xml  setup.cfg  setup.py
src/audio_expression_detector_pkg/audio_expression_detector_pkg/: audio_expression_detector.py
src/face_renderer_pkg/: package.xml  setup.cfg  setup.py
src/face_renderer_pkg/face_renderer_pkg/: face_renderer.py
src/facial_expression_detector_pkg/: package.xml  setup.cfg  setup.py
src/facial_expression_detector_pkg/facial_expression_detector_pkg/: facial_expression_detector.py
src/hub75_display_pkg/: package.xml  setup.cfg  setup.py
src/hub75_display_pkg/hub75_display_pkg/: hub75_display.py
src/i2c_input_pkg/: package.xml  setup.cfg  setup.py
src/i2c_input_pkg/i2c_input_pkg/: i2c_input.py
src/interface_pkg/: CMakeLists.txt  package.xml
src/mic_input_pkg/: package.xml  setup.cfg  setup.py
src/opencv2_display_pkg/: package.xml  setup.cfg  setup.py
src/opencv2_display_pkg/opencv2_display_pkg/: opencv2_display.py
src/osf_expression_detector_pkg/: package.xml  setup.cfg  setup.py
src/osf_receiver_pkg/: package.xml  setup.cfg  setup.py
src/param_server_pkg/: package.xml  setup.cfg  setup.py
src/screen_dispatcher_pkg/: package.xml  setup.cfg  setup.py
src/sensor_expression_detector_pkg/: package.xml  setup.cfg  setup.py
src/video_player_pkg/: package.xml  setup.cfg  setup.py
(+13 files in other folders)
