<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv2_display_pkg</name>
  <version>0.0.0</version>
  <description>Display received frames via OpenCV2.</description>
  <maintainer email="infopcgood@protonmail.com">infopcgood</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>interface_pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
